# Spawn_Gradient_Descent

./: Compare_SpawnGD_Fix_InitPoint.py  LICENSE  README.md  SPGD.ipynb  SpawnGD_Fix_InitPoint.py  SpawnGD_Fix_Init_Point.py  SpawnGD_Random_InitPoint.py  SpawnGD_Random_InitPoint_ٍEps_toMin.py  SpawnGD_Random_Init_Point.py  pyproject.toml
Deep_implementation/: Cifar_Compare_Best_Accuracy_Time.py  FashionMnist_Compare_Best_Accuracy_Time.py  SPGD7.ipynb  cifar.py  fashion_mnist.py  spawngd_deep_evaluation_commands.ipynb  spawngd_evaluation_command.ipynb
Deep_implementation/models/fashion_mnist/: densenet.py  preresnet.py  resnet.py  wrn.py
Deep_implementation/optimizers/: spawngd.py  spawngd_ms.py
evaluation_2d/: Compare_SpawnGD_Fix_InitPoint.py  pawngd_2d_evaluation_commands.ipynb  spawngd_2d_evaluation_commands.ipynb
evaluation_commands/: Compare_SpawnGD_Random_InitPoint.py  Compare_SpawnGD_Random_InitPoint_Eps_toMin.py
src/spawngd/: __init__.py  optimizer.py  spawngd.py  spawngd_ms.py
